--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="row header-height">
   <div class="col-8 omniva-red-background">
-    <h3 class="text-attr">TOODETE TAGASTAMINE</h3>
+    <h3 class="text-attr">{{ 'header.returnTitle' | translate }}</h3>
   </div>
   <div class="col-2 no-padding">
     <canvas id="myCanvas" width="175" height="100">
