--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -2,8 +2,8 @@
   <div class="col-4"></div>
   <div class="col-4">
     <form name="return-form" class="padding-from-header" (submit)="validate()">
-      <div class="col-12 center form-group">Lorem ipsum dolor sit amet, consectetur adispiscing elit. Suspendisse euismod mauris at ligula volutpat vulputate vitae ut dolor. Vivamus dignissim id purus quis congue. Sed sid amet mollis metus. <b>MORE INFO</b></div>
-      <label for="recipient" class="col-12">SAADETISE KÄTTESAAJA</label>
+      <div class="col-12 center form-group">{{ 'user.info' | translate }}</div>
+      <label for="recipient" class="col-12">{{ 'user.recipient' | translate }}</label>
       <div class="col-12 center form-group">
         <input type="text" [(ngModel)]="recipient" class="form-control col-11" id="recipient" name="recipient" disabled required>
         <div class="input-group-btn">
@@ -14,7 +14,7 @@
           </div>
         </div>
       </div>
-      <label for="deliveryCountry" class="col-12">SAADETISE ÜLEANDMISE RIIK</label>
+      <label for="deliveryCountry" class="col-12">{{ 'user.deliveryCountry' | translate }}</label>
       <div class="col-12 center form-group">
         <input type="text" [(ngModel)]="deliveryCountry" class="form-control col-11" id="deliveryCountry" name="deliveryCountry" disabled required>
         <div class="input-group-btn">
@@ -25,20 +25,20 @@
           </div>
         </div>
       </div>
-      <label for="name" class="col-12">SINU NIMI</label>
+      <label for="name" class="col-12">{{ 'user.name' | translate }}</label>
       <div class="col-12 center form-group">
         <input type="text" [(ngModel)]="name" class="form-control col-12" id="name" name="name" required>
       </div>
-      <label for="mobile" class="col-12">SINU MOBIILINUMBER</label>
+      <label for="mobile" class="col-12">{{ 'user.mobile' | translate }}</label>
       <div class="col-12 center form-group">
         <input type="text" [(ngModel)]="mobile" class="form-control col-12" id="mobile" name="mobile" required>
       </div>
-      <label for="email" class="col-12">SINU E-MAIL</label>
+      <label for="email" class="col-12">{{ 'user.email' | translate }}</label>
       <div class="col-12 center form-group">
         <input type="text" [(ngModel)]="email" class="form-control col-12" id="email" name="email" required>
       </div>
       <div class="col-12 center form-group">
-        <button type="submit" class="btn btn-primary btn-lg col-12 omniva-red-background no-border">TAGASTA TOODE</button>
+        <button type="submit" class="btn btn-primary btn-lg col-12 omniva-red-background no-border">{{ 'user.button.submitReturn' | translate }}</button>
       </div>
     </form>
   </div>
