--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -5,8 +5,8 @@
       <div class="col-12 center form-group">{{ 'user.info' | translate }}</div>
       <label for="recipient" class="col-12">{{ 'user.recipient' | translate }}</label>
       <div class="col-12 center form-group">
-        <input type="text" [(ngModel)]="recipient" class="form-control col-11" id="recipient" name="recipient" disabled required>
-        <div class="input-group-btn">
+        <input type="text" [(ngModel)]="recipient" class="form-control" id="recipient" name="recipient" disabled required>
+        <div class="input-group-btn dropdown-attr">
           <button type="button" class="selection-button btn btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           </button>
           <div class="dropdown-menu dropdown-menu-right">
@@ -16,8 +16,8 @@
       </div>
       <label for="deliveryCountry" class="col-12">{{ 'user.deliveryCountry' | translate }}</label>
       <div class="col-12 center form-group">
-        <input type="text" [(ngModel)]="deliveryCountry" class="form-control col-11" id="deliveryCountry" name="deliveryCountry" disabled required>
-        <div class="input-group-btn">
+        <input type="text" [(ngModel)]="deliveryCountry" class="form-control" id="deliveryCountry" name="deliveryCountry" disabled required>
+        <div class="input-group-btn dropdown-attr">
           <button type="button" class="selection-button btn btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           </button>
           <div class="dropdown-menu dropdown-menu-right">
