--- a/src/app/user-form/user-form.css
+++ b/src/app/user-form/user-form.css
@@ -1,8 +1,3 @@
-.center {
-  display: flex;
-  justify-content: center;
-}
-
 .no-border {
   border-color: transparent;
 }
@@ -12,10 +7,14 @@
 }
 
 .no-padding-left {
-  padding-left: 0px;
+  padding-left: 0;
 }
 
 .selection-button {
   background-color: #F04E23;
   border-color: transparent;
+}
+
+.dropdown-attr {
+  margin-left: 0px;
 }
