--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -29,7 +29,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="eloginModalTitle">{{ 'login.logIn' | translate }}</h5>
+        <h5 class="modal-title" id="loginModalTitle">{{ 'login.logIn' | translate }}</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
