--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -10,7 +10,7 @@
           <button type="button" class="selection-button btn btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           </button>
           <div class="dropdown-menu dropdown-menu-right">
-            <a *ngFor="let company of companies" class="dropdown-item" href="#" (click)="changeActiveCompany(company.id)">{{company.name + ' ('+ company.origin+')'}}</a>
+            <a *ngFor="let company of companies;let indx = index" class="dropdown-item" href="#" (click)="changeActiveCompany(indx)">{{company.name + ' ('+ company.country+')'}}</a>
           </div>
         </div>
       </div>
@@ -21,7 +21,7 @@
           <button type="button" class="selection-button btn btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           </button>
           <div class="dropdown-menu dropdown-menu-right">
-            <a *ngFor="let country of countries" class="dropdown-item" href="#" (click)="changeActiveCountry(country.id)">{{country.fullName + ' ('+ country.shortName+')'}}</a>
+            <a *ngFor="let country of countries" class="dropdown-item" href="#" (click)="changeActiveCountry(country)">{{country}}</a>
           </div>
         </div>
       </div>
