--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,19 +1,11 @@
-<div class="row header-height">
-  <div class="col-2">
-    <img class="align-right-custom" src="../../../assets/images/logo_omniva_large.png" alt="https://www.omniva.ee/public/banners/pood/logo_717x696.png" height="100px">
-  </div>
-  <div class="col-2 no-padding" style="margin-right: -1px">
-    <canvas class="canvas-attr" id="myCanvas" width="175" height="100">
-    </canvas>
-  </div>
-  <div class="col-8 omniva-red-background">
-    <div class="text-attr">
-      <h3 class="">{{ title | translate }}</h3>
-      <div class="padding-between-title row" data-toggle="dropdown">
-        <h5>{{sharedService.lang}}</h5>
-        <i class="fa fa-chevron-down chevron-margin"></i>
-      </div>
-      <div class="dropdown-menu dropdown-menu-right">
+<div class="row language">
+  <div class="col-12">
+    <div class="dropdown d-flex justify-content-end align-items-center">
+      <a id="dropdownLanguage" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        {{sharedService.lang}}
+        <i class="fa fa-angle-down" aria-hidden="true"></i>
+      </a>
+      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownLanguage">
         <h6 class="dropdown-item"><b>{{ 'admin.languageChoice' | translate }}</b></h6>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" (click)="changeLang('EST')">EST</a>
@@ -26,5 +18,19 @@
         <a class="dropdown-item" [hidden]="!sharedService.loggedIn" (click)="logout()"><b>{{ 'admin.logout' | translate }}</b></a>
       </div>
     </div>
+  </div>
+</div>
+
+<div class="row header">
+  <div class="col-2 d-flex justify-content-end align-items-center">
+    <a href="/"><img src="../../../assets/images/logo_omniva_large.png" alt="https://www.omniva.ee/public/banners/pood/logo_717x696.png" height="80px">
+    </a>
+  </div>
+  <div class="col-2 no-padding" style="margin-right: -1px">
+    <canvas class="canvas-attr" id="myCanvas" width="175" height="80">
+    </canvas>
+  </div>
+  <div class="col-8 omniva-red-background d-flex justify-content-end align-items-center white">
+      <h3 class="">{{ title | translate }}</h3>
   </div>
 </div>
