--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -22,15 +22,13 @@
 </div>
 
 <div class="row header">
-  <div class="col-2 d-flex justify-content-end align-items-center">
-    <a href="/"><img src="../../../assets/images/logo_omniva_large.png" alt="https://www.omniva.ee/public/banners/pood/logo_717x696.png" height="80px">
+  <div class="col-3 no-padding header-margin">
+    <a class="logo-pos" href="/"><img src="../../../assets/images/logo_omniva_large.png" alt="https://www.omniva.ee/public/banners/pood/logo_717x696.png" height="80px">
     </a>
-  </div>
-  <div class="col-2 no-padding" style="margin-right: -1px">
     <canvas class="canvas-attr" id="myCanvas" width="175" height="80">
     </canvas>
   </div>
-  <div class="col-8 omniva-red-background d-flex justify-content-end align-items-center white">
+  <div class="col-9 omniva-red-background d-flex justify-content-end align-items-center white">
       <h3 class="">{{ title | translate }}</h3>
   </div>
 </div>
