--- a/src/app/client/edit/client-edit.component.html
+++ b/src/app/client/edit/client-edit.component.html
@@ -8,21 +8,21 @@
   </div>
     <div class="modal-body">
       <label for="axapta_s" class="col-12">{{ 'admin.table.axapta' | translate }}
-        <input type="text" [(ngModel)]="client.axapta" class="form-control" id="axapta_s" name="axapta" required></label>
+        <input type="text" [(ngModel)]="client.axapta" class="form-control" id="axapta_s" name="axapta" required autocomplete="off"></label>
       <label for="street_s" class="col-12">{{ 'admin.table.street' | translate }}
-        <input type="text" [(ngModel)]="client.street" class="form-control" id="street_s" name="street" required></label>
+        <input type="text" [(ngModel)]="client.street" class="form-control" id="street_s" name="street" required autocomplete="off"></label>
       <label for="name_s" class="col-12">{{ 'admin.table.name' | translate }}
-        <input type="text" [(ngModel)]="client.name" class="form-control" id="name_s" name="name" required></label>
+        <input type="text" [(ngModel)]="client.name" class="form-control" id="name_s" name="name" required autocomplete="off"></label>
       <label for="city_s" class="col-12">{{ 'admin.table.city' | translate }}
-        <input type="text" [(ngModel)]="client.city" class="form-control" id="city_s" name="city" required></label>
+        <input type="text" [(ngModel)]="client.city" class="form-control" id="city_s" name="city" required autocomplete="off"></label>
       <label for="postIndex_s" class="col-12">{{ 'admin.table.postIndex' | translate }}
-        <input type="text" [(ngModel)]="client.postIndex" class="form-control" id="postIndex_s" name="postIndex" required></label>
+        <input type="text" [(ngModel)]="client.postIndex" class="form-control" id="postIndex_s" name="postIndex" required autocomplete="off"></label>
       <label for="country_s" class="col-12">{{ 'admin.table.country' | translate }}
-        <input type="text" [(ngModel)]="client.country" class="form-control" id="country_s" name="country" required></label>
+        <input type="text" [(ngModel)]="client.country" class="form-control" id="country_s" name="country" required autocomplete="off"></label>
       <label for="deliveryCountry_s" class="col-12">{{ 'admin.table.deliveryCountry' | translate }}
-        <input type="text" [(ngModel)]="client.deliveryCountry" class="form-control" id="deliveryCountry_s" name="deliveryCountry" required></label>
+        <input type="text" [(ngModel)]="client.deliveryCountry" class="form-control" id="deliveryCountry_s" name="deliveryCountry" required autocomplete="off"></label>
       <label for="serviceNumber_s" class="col-12">{{ 'admin.table.serviceNumber' | translate }}
-        <input type="text" [(ngModel)]="client.serviceNumber" class="form-control" id="serviceNumber_s" name="serviceNumber" required></label>
+        <input type="text" [(ngModel)]="client.serviceNumber" class="form-control" id="serviceNumber_s" name="serviceNumber" required autocomplete="off"></label>
     </div>
     <div class="modal-footer">
       <div class="col-4"></div>
