--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,9 +3,15 @@
   justify-content: center;
 }
 .omniva-red-background {
-  background-color: #F04E23;
+  background-color: #FF6319;
 }
 
 .no-padding {
   padding: 0px;
+}
+
+.scrollable-menu {
+  height: auto;
+  max-height: 175px;
+  overflow-x: hidden;
 }
