--- a/src/styles.css
+++ b/src/styles.css
@@ -2,4 +2,10 @@
 html, body {
   max-width: 100%;
   overflow-x: hidden;
+  font-family: tahoma-regular, sans-serif;
+}
+
+@font-face {
+  font-family: 'Tahoma_regular';
+  src: url('assets/font/Tahoma_Regular_font.ttf')
 }
