--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,17 +2,13 @@
   <div class="col-12">
     <div class="dropdown d-flex justify-content-end align-items-center">
       <a id="dropdownLanguage" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        {{sharedService.lang}}
+        {{sharedService.lang.countryLetters}}
         <i class="fa fa-angle-down" aria-hidden="true"></i>
       </a>
       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownLanguage">
         <h6 class="dropdown-item"><b>{{ 'admin.languageChoice' | translate }}</b></h6>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" (click)="changeLang('EST')">EST</a>
-        <a class="dropdown-item" (click)="changeLang('ENG')">ENG</a>
-        <a class="dropdown-item" (click)="changeLang('RUS')">RUS</a>
-        <a class="dropdown-item" (click)="changeLang('LIT')">LIT</a>
-        <a class="dropdown-item" (click)="changeLang('LAT')">LAT</a>
+        <a *ngFor="let lang of sharedService.languages" class="dropdown-item" (click)="changeLang(lang.countryLetters)">{{ lang.countryLetters}}</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" [hidden]="sharedService.loggedIn" (click)="openLogin()"><b>{{ 'admin.title' | translate }}</b></a>
         <a class="dropdown-item" [hidden]="!sharedService.loggedIn" (click)="logout()"><b>{{ 'admin.logout' | translate }}</b></a>
