--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,7 @@ html, body {
   font-family: 'Tahoma_regular';
   src: url('assets/font/Tahoma_Regular_font.ttf')
 }
+
+button[id^=ngb-typeahead]:active, button[id^=ngb-typeahead]:focus, button[id^=ngb-typeahead].active {
+  background-color: #FF6319 !important;
+}
