--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -16,7 +16,7 @@
       </div>
       <label for="recipient" class="col-12">{{ 'user.recipient' | translate }}</label>
       <div class="col-12 center form-group">
-        <input type="text" [(ngModel)]="recipient" class="form-control" id="recipient" name="recipient" disabled required>
+        <input type="text" [(ngModel)]="recipient" class="form-control" id="recipient" name="recipient" [ngbTypeahead]="search" required [disabled]="deliveryCountry.length === 0">
         <div class="input-group-btn dropdown-attr">
           <button type="button" class="selection-button btn btn-secondary dropdown-toggle dropdown-toggle-split dropdown-button-white" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           </button>
