--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -6,12 +6,7 @@
         <i class="fa fa-angle-down" aria-hidden="true"></i>
       </a>
       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownLanguage">
-        <h6 class="dropdown-item"><b>{{ 'admin.languageChoice' | translate }}</b></h6>
-        <div class="dropdown-divider"></div>
         <a *ngFor="let lang of sharedService.languages" class="dropdown-item" (click)="changeLang(lang.countryLetters)">{{ lang.countryLetters}}</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" [hidden]="sharedService.loggedIn" (click)="openLogin()"><b>{{ 'admin.title' | translate }}</b></a>
-        <a class="dropdown-item" [hidden]="!sharedService.loggedIn" (click)="logout()"><b>{{ 'admin.logout' | translate }}</b></a>
       </div>
     </div>
   </div>
@@ -24,7 +19,12 @@
     <canvas class="canvas-attr" id="myCanvas" width="175" height="80">
     </canvas>
   </div>
-  <div class="col-9 omniva-red-background d-flex justify-content-end align-items-center white">
-      <h3 class="">{{ title | translate }}</h3>
+  <div class="col-9 omniva-red-background d-flex justify-content-end align-items-center white row">
+      <h3 class="header-attr">{{ title | translate }}</h3>
+    <i class="fa fa-bars fa-2x" id="dropdownAdmin" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownAdmin">
+      <a class="dropdown-item" [hidden]="sharedService.loggedIn" (click)="openLogin()"><b>{{ 'admin.title' | translate }}</b></a>
+      <a class="dropdown-item" [hidden]="!sharedService.loggedIn" (click)="logout()"><b>{{ 'admin.logout' | translate }}</b></a>
+    </div>
   </div>
 </div>
