--- a/src/app/shared/header/header.css
+++ b/src/app/shared/header/header.css
@@ -22,7 +22,7 @@
   position: absolute;
   top: 0;
   bottom: 0;
-  margin: auto;
+  margin: auto 15px auto auto;
   right: 0;
 }
 .empty-filters {
@@ -37,4 +37,7 @@
   margin-right: -1px;
 }
 
+.header-attr {
+  margin: 6px;
+}
 
