--- a/src/app/client/edit/client-edit.component.html
+++ b/src/app/client/edit/client-edit.component.html
@@ -25,11 +25,20 @@
         <input type="text" [(ngModel)]="client.serviceNumber" class="form-control" id="serviceNumber_s" name="serviceNumber" required autocomplete="off"></label>
     </div>
     <div class="modal-footer">
-      <div class="col-3"></div>
-      <div class="col-6 center no-padding">
-        <button *ngIf="client.id === null" type="submit" class="btn btn-lg col-12 omniva-red-background no-border white">{{ 'admin.addButton' | translate }}</button>
-        <button *ngIf="client.id !== null" type="submit" class="btn btn-lg col-12 omniva-red-background no-border white">{{ 'admin.table.edit' | translate }}</button>
+      <div *ngIf="client.id === null" class="col-12 row auto-margin">
+        <div class="col-3"></div>
+        <div class="col-6 center">
+          <button type="submit" class="btn btn-lg col-12 omniva-red-background no-border white">{{ 'admin.addButton' | translate }}</button>
+        </div>
+        <div class="col-3"></div>
       </div>
-      <div class="col-3"></div>
+      <div *ngIf="client.id !== null" class="col-12 row auto-margin">
+        <div class="col-6">
+          <button class="btn btn-lg col-12 omniva-red-background no-border white" (click)="remove(client)">{{ 'admin.table.remove' | translate }}</button>
+        </div>
+        <div class="col-6">
+          <button type="submit" class="btn btn-lg col-12 omniva-red-background no-border white">{{ 'admin.table.edit' | translate }}</button>
+        </div>
+      </div>
     </div>
 </form>
